# eazybi-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/eazybi_mcp/: __init__.py  __main__.py  client.py  server.py
